# Runtime-lib-loader

./: CMakeLists.txt  SOClassLoader.h  main.cpp
Interface/: ITemplateClass.h
SharedClass/: CMakeLists.txt  Sum.cpp  Sum.h
